css/main.css
/*----- Global -----*/
@font-face {
	src: url(../font/CircularStd-Medium.ttf);
	font-family: CircularStd;
}
* {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-size: 100%;
	vertical-align: baseline;
	background: transparent;
}
html {
	font-family: CircularStd, sans-serif;
}
.landing {
	background-image: url(../images/bgFlood.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	height: 100vh;
	width: 100%;
	overflow-y: hidden;
	min-height: 600px;
	overflow-x: hidden;
}
.features {
	background-image: url(../images/bg_02.png);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	height: 100vh;
	width: 100%;
	overflow-y: hidden;
	min-height: 600px;
	position: relative;
}
.groups {
	background-image: url(../images/bg_03.png);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	height: 100vh;
	width: 100%;
	overflow-y: hidden;
	min-height: 600px;
	position: relative;
}

h1 {
	font-size: 36px;
	margin-bottom: 10px;
}
p {
	font-size: 18px;
	font-weight: 100;
	margin-bottom: 20px;
	opacity: 0.8;
}
a {
	font-size: 16px;
}

.btnOne {
	border: white 2px solid;
	border-radius: 100px;
	padding: 0.6em 1.75em;
}

/*----- Landing -----*/
.nav {
	padding-top: 3em;
}
.pages {
	float: right;
	text-align: right;
}
.pages a {
	text-decoration: none;
	color: white;
	margin-left: 25px;
	vertical-align: middle;
}
.logo {
	width: 160px;
	vertical-align: middle;
	margin-top: -10px;
}
.landingWrapper {
	width: 88%;
	margin: auto;
}
.landingContent {
	width: 100%;
	margin: 150px auto 0 auto;
	display: flex;
}
.contentLeft {
	flex: 0 0 55%;
}
.contentRight {
	flex: 0 0 45%;
}
.contentLeft h1,
.contentLeft p,
.contentLeft a {
	color: white;
	text-decoration: none;
}
.contentRight {
	margin-left: -100px;
}
.contentRight ul {
	display: inline-block;
	list-style: none;
	color: #454d4e;
	font-size: 15px;
	margin-bottom: 20px;
	text-align: center;
}
.contentRight iframe {
	width: 650px;
	height: 366px;
}
/* -------- share button --------- */
.btn_wrap > i {
	opacity: 0;
	font-size: 28px;
	color: #1f1e1e;
	will-change: transform;
	-webkit-transform: scale(.1);
	transform: scale(.1);
	-webkit-transition: all .3s ease;
	transition: all .3s ease;
}

.btn_wrap {
	position: relative;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	overflow: hidden;
	cursor: pointer;
	width: 140px;
	height: 40px;
	background-color: #eeeeed;
	border-radius: 100px;
	padding: 0 18px;
	will-change: transform;
	-webkit-transition: all .2s ease-in-out;
	transition: all .2s ease-in-out;
}

.btn_wrap > span {
	position: absolute;
	z-index: 100;
	width: 240px;
	height: 72px;
	border-radius: 80px;
	font-family: CircularStd, sans-serif;
	font-size: 14px;
	text-align: center;
	line-height: 70px;
	letter-spacing: 2px;
	color: #eeeeed;
	background-color: #1f1e1e;
	padding: 0 18px;
	-webkit-transition: all 1.2s ease;
	transition: all 1.2s ease;
}
.container {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-ms-flex-pack: distribute;
	justify-content: space-around;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	width: 240px;
	height: 64px;
	border-radius: 80px;
}

.container i:nth-of-type(1) {
	-webkit-transition-delay: 1.1s;
	transition-delay: 1.1s;
}

.container i:nth-of-type(2) {
	-webkit-transition-delay: .9s;
	transition-delay: .9s;
}

.container i:nth-of-type(3) {
	-webkit-transition-delay: .7s;
	transition-delay: .7s;
}

.container i:nth-of-type(4) {
	-webkit-transition-delay: .4s;
	transition-delay: .4s;
}

.btn_wrap:hover span {
	-webkit-transition-delay: .25s;
	transition-delay: .25s;
	-webkit-transform: translateX(-280px);
	transform: translateX(-280px);
}

.btn_wrap:hover i {
	opacity: 1;
	-webkit-transform: scale(1);
	transform: scale(1);
}
/*----- Features -----*/
.server {
	position: absolute;
	top: 130px;
	left: 8%;
}
.dot {
	position: absolute;
	bottom: 30px;
	right: 2%;
}
.server h1,
.server img,
.dot h1,
.dot img {
	display: inline-block;
	vertical-align: middle;
}
.server img,
.dot img {
	margin-bottom: 10px;
	width: 36px;
}
.server p,
.dot p {
	display: block;
	margin-left: 38px;
}
.dot i {
	color: #1e8ef5;
	margin-right: 5px;
}
.server i {
	color: #1e8ef5;
	margin-right: 5px;
}
/*----- Groups -----*/
.groupsWrapper {
	width: 88%;
	margin: auto;
}
.groupsContent {
	width: 100%;
	margin: 150px auto 0 auto;
	display: flex;
}
.contentLeft img,
.contentLeft h1 {
	display: inline-block;
	vertical-align: middle;
}
.contentLeft img {
	margin-bottom: 10px;
	width: 36px;
}
.groupsContent > .contentLeft p {
	margin-left: 40px;
}
.groupsImage {
	width: 500px;
	margin-top: 30px;
}
.contentLeft i {
	color: #1e8ef5;
	margin-right: 5px;
}
.contentRight img {
	margin-left: 5rem;
}
#ketua {
	margin-left: 6.6em;
}
#anggota1 {
	margin-left: 4.8em;
}
#anggota2 {
	margin-left: 3.5em;
}
/*----- Footer -----*/
.footer {
	width: 83%;
	position: absolute;
	bottom: 0;
	left: 50%;
	transform: translateX(-50%);
	-webkit-transform: translateX(-50%);
}
.footer p {
	color: #454d4e;
	display: inline-block;
}
.pagesRight {
	float: right;
}
.pagesRight p {
	margin-left: 25px;
}
.footer a {
	font-size: 18px;
	margin-bottom: 20px;
	text-decoration: none;
	color: #454d4e;
}

/*-------- Responsive Media --------*/
/* 
	##Device = Tablets, Ipads (portrait)
	##Screen = B/w 768px to 1024px
  */

/* @media (min-width: 800px) and (max-width: 1024px) {
	.landingB img {
		width: 12em;
		margin-top: 5em;
	}
	.landing {
		height: 70vh;
	}
	#typing {
		font-size: 2em;
	}
	body {
		width: 90%;
	}
	.post1 img {
		width: 155px;
		margin-top: 50px;
	}
	.post2 img {
		width: 200px;
		margin-top: 100px;
		margin-left: 60px;
	}
	.post3 img {
		width: 170px;
		margin-top: 100px;
	}
	.newsWr {
		font-size: 12px;
	}
} */

/* 
	##Device = Ipads (portrait)
	##Screen = B/w 768px
  */
/* @media (width: 768px) {
	.landingB img {
		width: 12em;
		margin-top: 5em;
	}
	.landing {
		height: 70vh;
	}
	#typing {
		font-size: 2em;
	}
	body {
		width: 90%;
	}
	.postText p {
		font-size: 18px;
	}
	.postText h2 {
		font-size: 24px;
	}
	.post1 img {
		width: 155px;
		margin-top: 50px;
		margin-right: 5%;
	}
	.post2 img {
		width: 155px;
		margin-top: 100px;
		margin-left: 2%;
	}
	.post3 img {
		width: 130px;
		margin-top: 100px;
	}
	.newsWr {
		font-size: 12px;
	}
} */

/* 
	##Device = Tablets, Ipads (landscape)
	##Screen = B/w 768px to 1024px
  */

/* @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
	.landingB img {
		width: 12em;
		margin-top: 5em;
	}
	.landing {
		height: 80vh;
	}
	#typing {
		font-size: 2em;
	}
	body {
		width: 90%;
	}
	.post1 img {
		width: 155px;
		margin-top: 50px;
	}
	.post2 img {
		width: 200px;
		margin-top: 100px;
	}
	.post3 img {
		width: 150px;
		margin-top: 100px;
	}
	.newsWr {
		font-size: 12px;
	}
} */

/* 
	##Device = Low Resolution Tablets, Mobiles
	##Screen = B/w 481px to 767px
  */

/* @media (min-width: 481px) and (max-width: 767px) {
	.landingB img {
		width: 12em;
		margin-top: 3em;
	}
	.landing {
		height: 80%;
	}
	#typing {
		font-size: 2em;
	}
	body {
		width: 90%;
	}
	.post1 img {
		width: 155px;
		margin-top: 50px;
	}
	.post2 img {
		width: 155px;
		margin-top: 100px;
	}
	.post3 img {
		width: 70px;
		margin-top: 100px;
	}
	.newsWr {
		font-size: 12px;
	}
} */

/* 
	##Device = Most of the Smartphones Mobiles
	##Screen = B/w 360px to 479px
  */

@media (min-width: 360px) and (max-width: 480px) {
	.landingWrapper {
		width: 90%;
		display: block;
	}
	.contentLeft h1 {
		font-size: 1.2em;
		font-weight: 500;
	}
	.contentLeft p {
		font-size: 0.8em;
	}
	.contentLeft a {
		font-size: 0.7em;
		font-weight: 200;
	}
	.contentRight iframe {
		width: 325px;
		height: 183px;
	}
	.landingContent {
		display: block;
		margin: 70px auto 0 auto;
	}
	.contentRight {
		margin-left: 0px;
	}
	.btnTwo {
		margin-top: 10px;
		margin-bottom: 30px;
		width: 40px;
		height: 15px;
	}
	.nav > .pages {
		display: none;
	}
	/* 
	--- 2nd page ----
  */
	.server h1 {
		font-size: 20px;
	}
	.server i {
		font-size: 20px;
	}
	.server p {
		font-size: 15px;
	}
	.server p > br {
		display: none;
	}
	.dot h1 {
		font-size: 20px;
	}
	.dot i {
		font-size: 20px;
		margin: 100px 0 0 11.5px;
	}
	.dot p {
		font-size: 15px;
	}
	.dot p > br {
		display: none;
	}
	.features {
		background-image: url(../images/bg_02mobile.png);
	}

	/* 
	--- 3th page ----
  */
	.groupsWrapper {
		width: 90%;
	}
	.groupsContent {
		display: block;
		margin: 50px auto 0 auto;
	}
	.groupsContent > .contentRight img {
		width: 300px;
		display: block;
		margin: 50px 0 10px 10px;
	}
	.groupsContent > .contentLeft br {
		display: none;
	}
	.groupsContent > .contentRight li {
		font-size: 12px;
	}
	#ketua {
		margin-left: 0.7em;
	}
	#anggota1 {
		margin-left: 1em;
	}
	#anggota2 {
		margin-left: 1em;
	}
	.footer {
		width: 90%;
	}
	.footer p,
	.footer a {
		font-size: 12px;
	}
}
/* 
	##Device = Most of the Smartphones Mobiles
	##Screen = B/w 320px to 479px
  */

@media (width: 320px) {
	.landingWrapper {
		width: 95%;
		display: block;
	}
	.contentLeft h1 {
		font-size: 1.2em;
		font-weight: 500;
	}
	.contentLeft p {
		font-size: 0.8em;
	}
	.contentLeft a {
		font-size: 0.7em;
		font-weight: 200;
	}
	.contentRight iframe {
		width: 304px;
		height: 171px;
	}
	.landingContent {
		display: block;
		margin: 70px auto 0 auto;
	}
	.contentRight {
		margin-left: 0px;
	}
	.btnTwo {
		margin-top: 10px;
		margin-bottom: 30px;
		width: 40px;
		height: 15px;
	}
	.nav > .pages {
		display: none;
	}
	/* 
	--- 2nd page ----
  */
	.server h1 {
		font-size: 18px;
	}
	.server i {
		font-size: 18px;
	}
	.server p {
		font-size: 13px;
	}
	.server p > br {
		display: none;
	}
	.dot h1 {
		font-size: 18px;
	}
	.dot i {
		font-size: 18px;
		margin: 100px 0 0 11.5px;
	}
	.dot p {
		font-size: 13px;
	}
	.dot p > br {
		display: none;
	}
	.features {
		background-image: url(../images/bg_02mobile.png);
	}

	/* 
	--- 3th page ----
  */
	.groupsWrapper {
		width: 90%;
	}
	.groupsContent {
		display: block;
		margin: 50px auto 0 auto;
	}
	.groupsContent > .contentRight img {
		width: 300px;
		display: block;
		margin: 50px 0 10px -9px;
	}
	.groupsContent > .contentLeft br {
		display: none;
	}
	.groupsContent > .contentRight li {
		font-size: 10px;
	}
	#ketua {
		margin-left: 0.3em;
	}
	#anggota1 {
		margin-left: 2em;
	}
	#anggota2 {
		margin-left: 1.1em;
	}
	.footer {
		width: 90%;
	}
	.footer p,
	.footer a {
		font-size: 10px;
	}
}

